[package]
name = "arweave_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
base64 = "0.13.0"
clap = { version = "4.0.15", features = ["derive"] }
futures = "0.3.24"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1", features = ["full"] }
